fix: card and tray spacing bugs smashed

--- a/packages/cyan-css/src/core/main.css
+++ b/packages/cyan-css/src/core/main.css
@@ -46,7 +46,7 @@ main > footer li {
 
 @media screen and (min-width: 621px) {
   main > footer {
-    margin-left: var(--cn-width-rail);
+    /*margin-left: var(--cn-width-rail);*/
     margin-bottom: var(--cn-line);
   }
 }
