--- a/packages/cyan-css/src/core/tray.css
+++ b/packages/cyan-css/src/core/tray.css
@@ -6,7 +6,8 @@ nav#tray {
   width: calc(100dvw - var(--cn-gap));
   padding: var(--cn-gap);
   height: 100dvh;
-  overflow: hidden;
+  overflow-x: hidden;
+  overflow-y: auto;
   background-color: var(--color-elevation-1);
   box-shadow: var(--color-shadow) 0px 0px var(--cn-line);
   transition: transform 0.11s ease-in-out;
