--- a/packages/cyan-css/src/utilities/content-columns.css
+++ b/packages/cyan-css/src/utilities/content-columns.css
@@ -14,7 +14,7 @@
   gap: var(--cn-gap);
   justify-content: center;
   align-items: flex-start;
-  width: calc(100dvw - var(--cn-grid) * 2);
+  width: 100cqw;
   margin-bottom: var(--cn-gap);
 }
 
